<resources>
    <string name="app_name">Opening Source Daily</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="nav_header_title">Opening Source</string>
    <string name="nav_header_subtitle" translatable="false">https://openingsource.org/</string>
    <string name="action_settings">settings</string>
    <string name="navigation_drawer_close" translatable="false">close</string>
    <string name="navigation_drawer_open" translatable="false">open</string>
    <string name="about">About</string>
    <string name="developers">Developers</string>
    <string name="join_menu">Join Us</string>
    <string name="contact">Share</string>
    <string name="contact_telegram">Telegram</string>
    <string name="contact_qq">QQ</string>
    <string name="social_menu">Follow Us</string>
    <string name="social_weibo">Weibo</string>
    <string name="social_facebook" translatable="false">Facebook</string>
    <string name="social_twitter" translatable="false">Twitter</string>
    <string name="social_google" translatable="false">Google+</string>
    <string name="home_page">Home</string>
    <string name="alert_message">Please check your Internet status and refresh later!</string>
    <string name="alert_title">Internet Unvailable</string>
    <string name="alert_positive">Ackowledge</string>
    <string name="tab_bottom_daily">Daily</string>
    <string name="tab_bottom_all">Previous</string>
    <string name="btn_more">READ MORE</string>
    <string name="btn_share">SHARE</string>
    <string name="author_nation">China</string>
    <string name="author_github" translatable="false">https://github.com/Hackerchai</string>
    <string name="string_version">Version</string>
    <string name="string_changelog">Changelog</string>
    <string name="string_license">License</string>
    <string name="string_fork_on_github">Fork  on github</string>
    <string name="string_visit_website">Visit website</string>
    <string name="author_website" translatable="false">https://hackerchai.com</string>
    <string name="string_send_an_email">Send an email</string>
    <string name="author_email" translatable="false">hackerchai.com@gmail.com</string>
    <string name="string_email_subject">Question concerning Opening Source APP</string>
    <string name="author_name" translatable="false">Hackerchai</string>
    <string name="orgnization_website" translatable="false">https://openingsource.org</string>
    <string name="app_repo" translatable="false">https://github.com/OpeningSourceORG/opening-source-app/</string>
    <string name="license_dialog" translatable="false">Opeing Source Daily App</string>
    <string name="dialog_release">Release</string>
    <string name="release" translatable="false">https://github.com/OpeningSourceORG/opening-source-app/releases</string>
    <string name="contributor_1" translatable="false">Haochen</string>
    <string name="contributor_1_link" translatable="false">https://github.com/StarDust-0219/</string>
    <string name="contributor_2" translatable="false">咪喵</string>
    <string name="contributor_1_email" translatable="false">jhc@openingsource.org</string>
    <string name="contributor_2_email" translatable="false">miniwa.meow.tsumiki@gmail.com</string>
    <string name="string_developer">Developer</string>
    <string name="contributor_3" translatable="false">glodxy</string>
    <string name="contributor_3_email" translatable="false">glodxy@gmail.com</string>
    <string name="contributor_4" translatable="false">LBB</string>
    <string name="contributor_4_email" translatable="false">lbb@openingsource.org</string>
    <string name="contributor_3_link" translatable="false">https://github.com/glodxy/</string>
    <string name="contributor_4_link" translatable="false">https://github.com/LBBym/</string>
    <string name="alert_error">Unable to load data.</string>
    <string name="contributor_5" translatable="false">shirley</string>
    <string name="contributor_5_email" translatable="false">shirley@openingsource.org</string>
    <string name="contributor_6_email" translatable="false">wen@openingsource.org</string>
    <string name="contributor_6_link" translatable="false">https://wenqixiang.com</string>
    <string name="contributor_6" translatable="false">Bootingman</string>
    <string name="contributor_2_link" translatable="false">https://github.com/mimaoxiao</string>
    <string name="about_text">
        \n\nOpening Source Daily is a column which aims to keep your learning habit everyday. It recommends a High-Quality Github Repository and a featured programming article for you.
        \n\nOpening Source Org
        \n\nMaster source, then masterpiece
        \n\nOpening Source Org is a non-profit, open source community aiming at enchancing productivity and taking pleasure in technology by open source cooperation. Now Opening Source Org develops in Mainland China, Taiwan and Singapore.
        \n\nSo far, the Org has the following columns: ‘Open Source Weekly’ on globally popular open source projects, ‘Open Source Daily’ on daily programming study, ‘Code Girl’, ‘Code Boy’ to promote young heroes and heroines programmers, ‘Open Source Host’ in different technology fields to promote open source, and ‘Opening Space’ to provide a workshop for open source cooperation. The community’s operation is managed by the technical committee and the hosts for different technical fields.
        \n\nSOScon (https://soscon.top/) (Students Open Source Conference) is hosted by Opening Source Org, it’s China’s first conference of open source for students. 0th SOScon will be hosted in Chongqing China in June
    </string>
    <string name="share_with">Share with</string>
</resources>
